<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_16"
    tools:context="com.mycoloruniverse.familyteamx.view.TaskItemEditActivity">


    <LinearLayout
        android:id="@+id/llTaskItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvItemTaskDescription"
            style="@style/Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_descr_caption" />

        <EditText
            android:id="@+id/etItemDescription"
            style="@style/EditText1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|top"
            android:lines="6" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvItemStatus"
        style="@style/Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_status" />

    <RadioGroup
        android:id="@+id/rgProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radio_group_style"
        android:checkedButton="@+id/rbInProgress"
        android:drawablePadding="12dp"

        android:orientation="horizontal"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/rbInProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/in_progress"
            android:textColor="@color/title_color" />

        <RadioButton
            android:id="@+id/rbDoneTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/done"
            android:textColor="@color/title_color" />

        <RadioButton
            android:id="@+id/rbCancelledTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/cancelled"
            android:textColor="@color/title_color" />
    </RadioGroup>


</LinearLayout>
