<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/space_16">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTaskItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="TODO"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTaskTitle"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/task_title"
            tools:text="Task title" />


        <EditText
            android:id="@+id/etTaskTitle"
            style="@style/EditText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_baseline_edit_24"
            android:hint="@string/your_task_title"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvTaskType"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:paddingTop="12dp"
            android:text="@string/task_type"
            tools:text="Task type" />

        <Spinner
            android:id="@+id/sprTaskType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_style"
            android:entries="@array/pref_example_list_titles"
            android:paddingVertical="8dp"
            android:spinnerMode="dropdown" />


        <TextView
            android:id="@+id/tvTaskStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:paddingTop="12dp"
            android:text="@string/task_status"
            tools:text="Status" />

        <RadioGroup
            android:id="@+id/rgProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_group_style"
            android:checkedButton="@+id/rbInProgress"
            android:drawablePadding="12dp"

            android:orientation="horizontal"
            android:padding="8dp">

            <RadioButton
                android:id="@+id/rbInProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/in_progress"
                android:textColor="@color/title_color" />

            <RadioButton
                android:id="@+id/rbDoneTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/done"
                android:textColor="@color/title_color" />

            <RadioButton
                android:id="@+id/rbCancelledTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/cancelled"
                android:textColor="@color/title_color" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            style="@style/EditText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:hint="@string/describe_your_cancellation_reason"
            android:inputType="textMultiLine"
            android:lines="5"
            android:textColorHint="@android:color/holo_red_light" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



