<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_16"
    tools:context="com.mycoloruniverse.familyteamx.view.TaskItemEditActivity">

    <TextView
        android:id="@+id/tvItemProduct"
        style="@style/Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/product" />

    <AutoCompleteTextView
        android:id="@+id/actvItemName"
        style="@style/EditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llItemUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingRight="@dimen/space_8">

            <TextView
                android:id="@+id/tvItemUnit"
                style="@style/Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_unit" />

            <Spinner
                android:id="@+id/sprItemUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_style"

                android:entries="@array/units_goods"
                android:paddingVertical="8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llItemValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/space_8">

            <TextView
                android:id="@+id/tvItemValue"
                style="@style/Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/item_value" />

            <EditText
                android:id="@+id/etItemValue"
                style="@style/EditText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:inputType="numberDecimal"
                tools:text="1" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llItemPrice"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingRight="@dimen/space_8">

            <TextView
                android:id="@+id/tvItemPrice"
                style="@style/Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/item_price" />

            <EditText
                android:id="@+id/etItemPrice"
                style="@style/EditText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:inputType="numberDecimal"

                tools:text="0.00" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llItemSum"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:orientation="vertical"
            android:paddingLeft="@dimen/space_8">

            <TextView
                android:id="@+id/tvItemSum"
                style="@style/Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/item_sum" />

            <EditText
                android:id="@+id/etItemSum"
                style="@style/EditText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:inputType="numberDecimal"
                tools:text="0.00" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvItemStatus"
        style="@style/Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_status" />


    <RadioGroup
        android:id="@+id/rgProgressTaskItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radio_group_style"
        android:checkedButton="@+id/rbInProgress"
        android:drawablePadding="12dp"

        android:orientation="horizontal"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/rbInProgressTaskItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/in_progress"
            android:textColor="@color/title_color" />

        <RadioButton
            android:id="@+id/rbDoneTaskItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/done"
            android:textColor="@color/title_color" />

        <RadioButton
            android:id="@+id/rbCancelledTaskItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/cancelled"
            android:textColor="@color/title_color" />
    </RadioGroup>

</LinearLayout>
