<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/space_16">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTaskItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="TODO"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvTaskSumTitle"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:paddingTop="12dp"
            android:text="@string/total_sum"
            tools:text="Total sum" />

        <EditText
            android:id="@+id/etTaskSum"
            style="@style/EditText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_calculate_24"
            android:gravity="end"
            android:hint="@string/your_task_title"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:id="@+id/ll_valuta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:paddingTop="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_8"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvReceiptCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/receipt_currency" />

                <Spinner
                    android:id="@+id/spReceiptCurrency"
                    style="@style/MySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/multi_select_list_preference_default_value"
                    android:gravity="right|center_vertical"
                    android:text="USD" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"

                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRateCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:text="@string/rate_currency" />

                <EditText
                    android:id="@+id/etRateCurrency"
                    style="@style/EditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="15dp"
                    android:gravity="right|center_vertical"
                    android:inputType="numberDecimal"
                    android:text="1" />

            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/chbDivideSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/divide_sum_per_items"
            android:textColor="@color/title_color" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



